# legant

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  embed.go  go.mod  go.sum  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
clients/: README.md
clients/python/: README.md  pyproject.toml
clients/python/legant_sdk/: __init__.py  agentguard.py  middleware.py  revocation.py  verifier.py
clients/python/tests/: test_agentguard.py  test_conformance.py  test_middleware.py
deployments/: Dockerfile  docker-compose.yml
docs/: AGENT_AUTHOR.md  CLAUDE_CODE.md  CONCEPTS.md  GATEWAY.md  GETTING_STARTED.md  GRANTS.md  RELEASING.md  REVOCATION.md  THREAT_MODEL.md  UPGRADE.md
examples/: README.md
migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_organizations.down.sql  000002_organizations.up.sql  000003_agents.down.sql  000003_agents.up.sql  000004_invitations.up.sql  000005_email_tokens.up.sql  000006_authz.down.sql  000006_authz.up.sql  000007_delegation_consents.down.sql  000007_delegation_consents.up.sql  000008_exchanged_tokens.down.sql  000008_exchanged_tokens.up.sql  000009_dcr.down.sql  000009_dcr.up.sql  000010_multihop_delegation.down.sql  000010_multihop_delegation.up.sql  000011_audit_hash_chain.down.sql  000011_audit_hash_chain.up.sql  000012_audit_anchors.down.sql  000012_audit_anchors.up.sql  000013_audit_chain_state.down.sql  000013_audit_chain_state.up.sql  000014_revocation_feed.down.sql  000014_revocation_feed.up.sql  (+4 more)
sdk/: README.md  verifier.go  (+5 more)
(+213 files in other folders)
